bk_ida/gccida/c3/push_to_full_sequence
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_to_full_sequence/src/emit-rtl.c:4956:12: error: expected expression
*( _OWORD *)&v2->first = *( _OWORD *)&emit->x_first_insn; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_to_full_sequence/src/emit-rtl.c:4956:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v2->first = *( _OWORD *)&emit->x_first_insn; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_to_full_sequence/src/emit-rtl.c:4956:37: error: expected expression
*( _OWORD *)&v2->first = *( _OWORD *)&emit->x_first_insn; 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_to_full_sequence/src/emit-rtl.c:4956:29: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v2->first = *( _OWORD *)&emit->x_first_insn; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_to_full_sequence/src/emit-rtl.c:4959:12: error: expected expression
*( _OWORD *)&emit->x_first_insn = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_to_full_sequence/src/emit-rtl.c:4959:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&emit->x_first_insn = 0LL; 
   ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_to_full_sequence/src/obj/emit-rtl.o] Error 1
